<resources>
    <string name="app_name">InstaApp</string>
    <string name="login_message">Login to your account!</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="login">Login</string>
    <string name="register_message">Create your account!</string>
    <string name="full_name_register_hint">Full Name</string>
    <string name="email_register_hint">E-Mail</string>
    <string name="username_register_hint">Username</string>
    <string name="password_register_hint">Password</string>
    <string name="signup">Sign Up</string>

    <string name="error_invalid_password">Password field required</string>
    <string name="error_field_required">Username field required</string>

    <string name="login_failed">Username or password was incorrect!</string>
    <string name="image_added_succes">Added successfully</string>
    <string name="image_added_failure">Couldn\'t be added</string>

    <string name="my_profile">My Profile</string>
    <string name="newsfeed">Newsfeed</string>

    <string name="account_created">User account created successfully</string>
    <string name="tap_to_add_image">Tap + to add an image</string>
    <string name="write_something_about_picture">Write something about this picture</string>
    <string name="post">Post</string>
    <string name="couldnt_upload">Couldn\'t upload image</string>
    <string name="couldnt_get_image">Couldn\'t get image</string>
    <string name="add_image_first">Add an image first by tapping on +</string>
    <string name="request_not_successful">Request not successful!</string>
    <string name="something_went_wrong">Something went wrong!</string>
</resources>
