<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="40dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textSize="38dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/hint_login_username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#cccccc"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#cccccc"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/login_button"
            android:textSize="20dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/sign_up_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#cccccc"
            android:textSize="16dp"
            android:text="Sign Up"/>
    </LinearLayout>

</ScrollView>